# system_bankowy

./: .gitignore  CMakeLists.txt  README.md  System.cpp  System.h  main.cpp
Bank/cpp/: Bank.cpp  Check.cpp  DataOfClientInTheBank.cpp  DataOfClients.cpp  DataOfEmployeeOfTheBank.cpp  DataOfEmployees.cpp
Bank/h/: Bank.h  Check.h  DataOfClientInTheBank.h  DataOfClients.h  DataOfEmployeeOfTheBank.h  DataOfEmployees.h
Commands/: Command.cpp  Command.h  CommandFactory.cpp  CommandFactory.h  CommandFromClient.h  CommandFromEmployee.h  CommandFromThirdPartyEmployee.cpp  CommandFromThirdPartyEmployee.h  ExitCommand.cpp  ExitCommand.h
Commands/CommandFromClient/: ChangeAccountCommand.cpp  ChangeAccountCommand.h  CheakAvlCommand.cpp  CheakAvlCommand.h  CloseAccountCommand.cpp  CloseAccountCommand.h  ListCommand.cpp  ListCommand.h  MessageCommand.cpp  MessageCommand.h  OpenAccountCommand.cpp  OpenAccountCommand.h  RedeemCommand.cpp  RedeemCommand.h  WhoAmICommand.cpp  WhoAmICommand.h
Commands/CommandFromThirdPartyEmployee/: SendCheckCommand.cpp  SendCheckCommand.h
Commands/CommandsFromEmployee/: ApproveCommand.cpp  ApproveCommand.h  DisapproveCommand.cpp  DisapproveCommand.h  TaskCommand.cpp  TaskCommand.h  ValidateCommand.cpp  ValidateCommand.h  ViewCommand.cpp  ViewCommand.h
Helpers/: MyString.cpp  MyString.h  Polymorphic_Ptr.hpp  Queue.hpp  Vector.hpp
Login/cpp/: Login.cpp
Login/h/: Login.h
Users/Tasks/cpp/: Change_task.cpp  Close_task.cpp  Open_task.cpp  Task.cpp  TaskFactory.cpp
Users/Tasks/h/: Change_task.h  Close_task.h  Open_task.h  Task.h
Users/cpp/: Client.cpp  Employee.cpp  Message.cpp  ThirdPartyEmployee.cpp  User.cpp  UsersFactory.cpp
Users/h/: Client.h  Employee.h  Message.h  ThirdPartyEmployee.h  User.h  UsersFactory.h
